--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,203 +1,18 @@
-body {
-  font-family: "Roboto", sans-serif;
-  background-color: #f5f5f5;
-  color: #212121;
-  margin: 0;
-  padding: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: #212121;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px; /* space below the table */
-}
-
-table,
-th,
-td {
-  border: 1px solid #bdbdbd;
-  padding: 10px 15px; /* Adjusting the padding for table cells */
-  vertical-align: middle; /* Vertical centering */
-}
-
-table tr:nth-child(even) {
-  background-color: #e0e0e0;
-}
-
-table tr:hover {
-  background-color: #bdbdbd;
-}
-
-button {
-  background-color: white;
-  color: #212121;
-  cursor: pointer;
-  padding: 5px 10px; /* Adding some padding to the button */
-}
-
-button:hover {
-  background-color: #9fa8da;
-  color: white; /* Changing text color on hover */
-}
-
-.container {
-  display: flex;
-  height: 100vh; /* ensure the container fills the screen */
-}
-
-.side {
-  padding: 20px;
-}
-
-.drafted-players,
-.drafted-players h2 {
-  background-color: #212121; /* or your preferred darker color */
-  color: #f5f5f5; /* adjust text color for better contrast */
-  width: 225px;
-  padding: 20px;
-  overflow-y: auto; /* to handle overflow content, if any */
-  flex: none;
-}
-
-.your-team,
-.your-team h2 {
-  background-color: #212121; /* or your preferred darker color */
-  color: #f5f5f5; /* adjust text color for better contrast */
-  width: 200px;
-  overflow-y: auto; /* to handle overflow content, if any */
-  flex: none;
-}
-
-.main-content {
-  flex: 3; /* this allows the main content to take up thrice the space as the sides */
-  padding: 20px;
-  background-color: #f5f5f5; /* or your preferred lighter color */
-}
-
-#draftedPlayersList {
-  list-style-type: none; /* Show numbers instead of bullets */
-  padding-left: 0; /* Remove default padding */
-}
-
-/* Adjustments for name */
-.drafted-name {
-  display: inline-block; /* To allow for margin adjustments */
-  margin-right: 10px; /* Space between the name and the button */
-}
-
-/* Additional adjustments for the Add to Team button (optional) */
-#draftedPlayersList button {
-  border: none;
-  color: #212121;
-  padding: 5px 10px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 16px;
-}
-
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; /* vertically center align items if they have different heights */
-}
-
-.optimize-button {
-  background-color: #3f51b5; /* Example color, choose what stands out */
-  color: #fff; /* White text */
-  padding: 15px 30px; /* More padding to make it larger */
-  border: none;
-  border-radius: 5px; /* Rounded corners */
-  font-size: 18px; /* Larger font */
-  cursor: pointer;
-  margin-top: 20px; /* Some space between the button and the table or anything above */
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* Slight shadow for depth */
-  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
-  margin: 10px auto 20px; /* 10px top margin, centered horizontally, 20px bottom margin */
-  width: 50%; /* Width is set to 50% of its container */
-  padding: 10px 20px; /* Increased padding for a larger, more prominent button */
-  display: block; /* To allow for margins to center it */
-}
-
-.optimize-button:hover {
-  background-color: #283593; /* Slightly darker color on hover */
-}
-
-#yourTeamList {
-  list-style-type: none; /* Removes the bullet points */
-  padding-left: 0; /* Removes the default padding */
-}
-
-table thead th {
-  background-color: #212121; /* Green background */
-  color: #e0e0e0; /* White text */
-  text-align: center; /* Centered text */
-  padding: 10px; /* Some padding */
-}
-
-table tr:nth-child(even) {
-  background-color: #e0e0e0 !important;
-}
-
-table tr:hover {
-  background-color: #bdbdbd !important;
-}
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
-
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 30%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.datatable-container {
+.custom-checkmark {
+  width: 20px;
+  height: 20px;
   position: relative;
+  display: inline-block;
 }
 
-#round-info {
+.custom-checkmark:after {
+  content: "";
   position: absolute;
-  top: 0;
-  left: 0; /* or you can use 'left: 0;' if you want it on the left side */
-  z-index: 1; /* to make sure it appears above the DataTable */
+  left: 4px;
+  top: 0px;
+  width: 4px;
+  height: 8px;
+  border: solid black;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
 }
