--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,18 +1,3 @@
-.custom-checkmark {
-  width: 20px;
-  height: 20px;
-  position: relative;
-  display: inline-block;
-}
-
-.custom-checkmark:after {
-  content: "";
-  position: absolute;
-  left: 4px;
-  top: 0px;
-  width: 4px;
-  height: 8px;
-  border: solid black;
-  border-width: 0 2px 2px 0;
-  transform: rotate(45deg);
+.side {
+  min-height: 100vh; /* Minimum height to match the viewport height */
 }
