--- a/app/templates/draft.html
+++ b/app/templates/draft.html
@@ -100,7 +100,7 @@
       <!-- Center - Available Players -->
       <div class="main-content flex-3 p-4">
         <div class="header-container">
-          <h2 class="font-sans text-2xl">Available Players</h2>
+          <h1 class="font-sans text-2xl">Fantasy Football Draft Optimizer</h1>
         </div>
         <div class="flex justify-center mb-4 sticky top-0 z-50">
           <button
@@ -187,6 +187,14 @@
 
       <!-- Right Side - Your Team -->
       <div class="side your-team flex-1 p-4">
+        <div id="credits-content">
+          <p class="text-sm">if useful, follow @jacksoslow on twitter</p>
+          <br />
+          <p class="text-sm">if not, fix it on github</p>
+          <br />
+          <p class="text-sm">thanks and happy drafting!</p>
+        </div>
+        <hr class="my-4" />
         <h2 class="font-sans text-2xl">Your Team</h2>
         <ul id="yourTeamList"></ul>
       </div>
