adding social links

--- a/app/templates/draft.html
+++ b/app/templates/draft.html
@@ -187,13 +187,23 @@
 
       <!-- Right Side - Your Team -->
       <div class="side your-team flex-1 p-4">
-        <div id="credits-content">
-          <p class="text-sm">if useful, follow @jacksoslow on twitter</p>
-          <br />
-          <p class="text-sm">if not, fix it on github</p>
-          <br />
-          <p class="text-sm">thanks and happy drafting!</p>
-        </div>
+        <p class="social-links">
+          <a
+            href="https://twitter.com/JackSoslow"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Follow Jack Soslow on Twitter here</a
+          >
+        </p>
+        <p class="social-links">
+          <a
+            href="https://github.com/jsoslow2/fantasy-football-models"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Contribute to the GitHub here</a
+          >
+        </p>
+        <!-- Divider -->
         <hr class="my-4" />
         <h2 class="font-sans text-2xl">Your Team</h2>
         <ul id="yourTeamList"></ul>
